--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,13 @@
         android:theme="@style/Theme.SwipeYC21"
         tools:targetApi="31">
         <activity
+            android:name=".ui.auth.OnBoardingActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.StartUpScreen"
             android:exported="true"
             android:label="@string/title_activity_start_up_screen"
-            android:theme="@style/Theme.SwipeYC21" >
+            android:theme="@style/Theme.SwipeYC21">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,9 +28,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
