--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SwipeYC21"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.main.MainContainerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.forms.FormsActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.auth.OnBoardingActivity"
             android:exported="false" />
@@ -28,7 +36,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="false" />
     </application>
 
 </manifest>
